=== Version 0.7.3
* Enhancements
  * Improved handling of alert and confirm Javascript popups (George Shakhnazaryan)
  * Added hover method to Element.  Browser support is limited.
  * Added support for the following new elements
	Video

=== Version 0.7.2 / 2012-8-1
* Enhancements
  * Added ability to find list_item by :text
  * Added support for the following new elements
	Canvas
	Audio
  * Updated to use selenium-webdriver 2.25.0
  * Updated to provide better support for table_row.find_index_by_title when tables have theads... (George Shakhnazaryan)

=== Version 0.7.1 / 2012-7-15
* Enhancements
  * Added support for the following new elements
	Area
  * Added the following aliased methods to their corresponding Accessors method
	a => link
	hidden => hidden_field
	img => image
	li => list_item
	ol => ordered_list
	p => paragraph
	radio => radio_button
	select => select_list
	td => cell
	textarea => text_area
	ul => unordered_list
  * Added the following methods to return generic Element objects
	abbr
	address
	article
	aside
	bdi
	bdo
	cite
	code
	dd
	dfn
	dt
	em
	figcaption
	figure
	footer
	header
	hgroup
	kbd
	mark
	nav
	noscript
	rp
	rt
	ruby
	samp
	section
	sub
	summary
	sup
	var
	wbr

=== Version 0.7.0 / 2012-6-30
* Enhancements
  * Updated Table [] method to return a row that has matching partial text in any column (Thanks George Shakhnazaryan)
  * Updated TableRow [] method to return column that matching partial text in any column (Thanks George Shakhnazaryan)
  * Added if_page to PageFactory (Thanks Gregory Shayko)
  * Added index_property for accessing sets of related fields (Thanks robkid)
  * Updated to use selenium-webdriver 2.24.0


=== Version 0.6.9 / 2012-6-12
* Enhancements
  * Added select_value method to SelectList
  * Updated link to be able to identify by title
  * Updated div to be able to identify by title
  * Updated text_field to be able to identify by text and label
  * Updated to use selenium-webdriver 2.22.2
* Fixes