@@ -281,3 +281,8 @@ Feature: Elements
   Scenario: Flashing an element
     When I retrieve a button element
     Then I should be able to flash it
+    
+  @focus
+  Scenario: Getting an element's id
+    When I retrieve a button element
+    Then I should know its id is "button_id"
